Changelog for zest.releaser
===========================

1.11 (unreleased)
-----------------

- Nothing changed yet.


1.10 (2009-02-25)
-----------------

- A ``    version = '1.0',`` in setup.py is now also rewritten
  correctly.  Previously just a ``version = '1.0'`` would be injected,
  so without indentation and comma.  [reinout]

- Ask before checking out the tag. Sometimes the checkout is huge and
  you know you don't want it. You don't get asked for a pypi upload,
  though if you don't check out the tag.  [reinout]


1.9 (2009-02-24)
----------------

- 'release' now also makes a tag checkout in a temporary directory.
  [Reinout]

- Made 'longtest' work on Linux as there the command is 'rst2html' and
  apparently on the Mac it is 'rst2html.py'.  [maurits]


1.8 (2009-02-23)
----------------

- Added 'longtest' command that renders a setup.py's long description
  and opens it in a web browser.  [reinout]


1.7 (2009-02-16)
----------------

- Supporting alternative history version header format: 'version - date'.
  [reinout]


1.6 (2009-02-14)
----------------

- Patch by Michael Howitz: sys.executable is used instead of a string that
  doesn't work on every system.  [reinout]


1.5 (2009-02-11)
----------------

- Changed y/n into Y/n, so defaulting to 'yes'.  [reinout]

- Improved the documentation.  [reinout]

- When a yes/no question is asked, do not treat 'no' as the default
  but explicitly ask for an input -- it was too easy to press enter
  and wrongly expect 'yes' as default.  [maurits]


1.4 (2008-10-23)
----------------

- Fixed missing import of utils.  [maurits]


1.3 (2008-10-23)
----------------

- Moved stabilize script to zest.stabilizer so that zest.releaser is just for
  releasing individual packages. Nice, tidy, reusable.  [reinout]

- Allowing '-v' option on all commands: it gives you debug-level logging.
  [reinout]


1.2 (2008-10-16)
----------------

- We now prefer the version from setup.py over any version.txt file